k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backstage
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: backstage
          image: ghcr.io/ashikuroff/backstage:sha-66034c870612872510aede93f659b89f179a0b41
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7007
              name: http
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: backstage-data
              mountPath: /var/backstage
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: backstage-data
          persistentVolumeClaim:
            claimName: backstage-data
        - name: tmp
          emptyDir: {}
