k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    external-dns.alpha.kubernetes.io/hostname: backstage.localtest.me
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - backstage.localtest.me
      secretName: backstage-tls
  rules:
    - host: backstage.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
