k8s/test-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: ingress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - -text=ingress ok
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: ingress-test
spec:
  selector:
    app: http-echo
  ports:
    - port: 80
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo
  namespace: ingress-test
  annotations:
    cert-manager.io/cluster-issuer: local-selfsigned
    external-dns.alpha.kubernetes.io/hostname: echo.localtest.me
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - echo.localtest.me
      secretName: http-echo-tls
  rules:
    - host: echo.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  number: 80
